--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "my-webhook-project",
+  "name": "webhook-receiver",
   "version": "1.0.0",
-  "description": "A simple webhook endpoint",
+  "description": "A simple webhook receiver app",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2"
   }
 }
